--- a/src/public/sass/_ser.scss
+++ b/src/public/sass/_ser.scss
@@ -12,6 +12,7 @@
         .ser__body {
             margin-top: 80px;
             .container {
+                display: block;
                 .ser__item {
                     margin-top: 60px;
                     display: flex;
