--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -56,8 +56,8 @@
                             </a>
                         </li>
                         <li>
-                            <a class="social--link" target="_blank" rel="nofollow" href="https://wa.link/ra2121">
-                                <img src="/img/ws-white.png" alt="Whatsapp k1n0" title="Whatsapp | K1n0.com">
+                            <a class="social--link" target="_blank" rel="nofollow" href="https://t.me/k1n0c0m">
+                                <img src="/img/telegram.png" alt="Telegram k1n0" title="Telegram | K1n0.com">
                             </a>
                         </li>
                         <li>
