--- a/src/views/layouts/servicios.hbs
+++ b/src/views/layouts/servicios.hbs
@@ -2,7 +2,6 @@
 <img src="/img/inner-servicios-kino.jpg" alt="Servicios k1n0" alt="Servicios | K1n0.com" class="inner__con">
 <img src="/img/inner-servicios-kino-mob.jpg" alt="Servicios k1n0" alt="Servicios | K1n0.com" class="inner__mob">
 {{!-- Fin Inner --}}
-<div class="masthead_nos"></div>
 {{!-- Title --}}
 <div class="ser">
     <div class="container">
@@ -45,7 +44,7 @@
                         </div>
                         <div class="serv__link">
                             {{#if user}}
-                            <p>Solicita este servicio <a href="/links/add">Aquí</a></p>
+                            <p>Cotiza este servicio <a href="/servicios/diseno">Aquí</a></p>
                             {{else}}
                             <p>Solicita este servicio <a href="/signup">Aquí</a></p>
                             {{/if}}
@@ -77,7 +76,7 @@
                         </div>
                         <div class="serv__link">
                             {{#if user}}
-                            <p>Solicita este servicio <a href="/links/add">Aquí</a></p>
+                            <p>Cotiza este servicio <a href="/servicios/web">Aquí</a></p>
                             {{else}}
                             <p>Solicita este servicio <a href="/signup">Aquí</a></p>
                             {{/if}}
@@ -108,7 +107,7 @@
                         </div>
                         <div class="serv__link">
                             {{#if user}}
-                            <p>Solicita este servicio <a href="/links/add">Aquí</a></p>
+                            <p>Cotiza este servicio <a href="/links/add">Aquí</a></p>
                             {{else}}
                             <p>Solicita este servicio <a href="/signup">Aquí</a></p>
                             {{/if}}
@@ -148,7 +147,7 @@
                                     </div>
                                     <div class="serv__link">
                                         {{#if user}}
-                                        <p>Solicita este servicio <a href="/links/add">Aquí</a></p>
+                                        <p>Cotiza este servicio <a href="/links/add">Aquí</a></p>
                                         {{else}}
                                         <p>Solicita este servicio <a href="/signup">Aquí</a></p>
                                         {{/if}}
@@ -180,7 +179,7 @@
                                     </div>
                                     <div class="serv__link">
                                         {{#if user}}
-                                        <p>Solicita este servicio <a href="/links/add">Aquí</a></p>
+                                        <p>Cotiza este servicio <a href="/links/add">Aquí</a></p>
                                         {{else}}
                                         <p>Solicita este servicio <a href="/signup">Aquí</a></p>
                                         {{/if}}
@@ -212,7 +211,7 @@
                                     </div>
                                     <div class="serv__link">
                                         {{#if user}}
-                                        <p>Solicita este servicio <a href="/links/add">Aquí</a></p>
+                                        <p>Cotiza este servicio <a href="/links/add">Aquí</a></p>
                                         {{else}}
                                         <p>Solicita este servicio <a href="/signup">Aquí</a></p>
                                         {{/if}}
