--- a/src/views/partials/home.hbs
+++ b/src/views/partials/home.hbs
@@ -459,7 +459,7 @@
                     <img src="/img/usr-red.png" alt="k1n0 | Registro" title="k1n0 | Registro" class="sol__img">
                 </a>
                 {{else}}
-                <a href="/links/add">
+                <a href="/links/signin">
                     <img src="/img/usr-red.png" alt="k1n0 | Añadir" title="k1n0 | Añadir Servicios" class="sol__img">
                 </a>
                 {{/if}}
