--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -83,50 +83,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
-    <script>
-        document.getElementById('verifyForm').addEventListener('submit', runVerify);
-        function runVerify(e) {
-            e.preventDefault();
-            runCaptcha();
-        }
-
-        function runCaptcha() {
-            grecaptcha.execute('6LcAQioaAAAAABTVMAllg8UW0swpY3VaeDX9GEOv', { action: 'submit' }).then(function (token) {
-                const fullname = document.querySelector('#fullname');
-                const username = document.querySelector('#username');
-                const password = document.querySelector('#password');
-                const phone = document.querySelector('#phone');
-                const email = document.querySelector('#email');
-                const captcha = token;
-
-                sendData(fullname, username, password, phone, email, captcha);
-            });
-        }
-
-        function sendData(fullname, username, password, phone, email, captcha) {
-            const info = JSON.stringify({ fullname: fullname, username: username, password: password, phone: phone, email: email, captcha: captcha });
-            fetch('/verify', {
-                method: 'POST',
-                headers: {
-                    'Accept': 'application/json, text/plain, */*',
-                    'Content-type': 'application/json'
-                },
-                body.info
-            }).then((res) => res.json()).then((data) => {
-                alert('msg: ' + data.msg + ', score' + data.score);
-            });
-        };
-    </script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script>
-        function signOut() {
-            var auth2 = gapi.auth2.getAuthInstance();
-            auth2.signOut().then(function () {
-                console.log('User signed out.');
-            });
-        }
-    </script>
-    <script src="../../public/js/goauth.js">require('/js/goauth');</script>
+    <script src="/js/sitemap.js"></script>
 </body>
 
 </html>
