--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -60,6 +60,8 @@
     <script src="https://www.google.com/recaptcha/api.js?render=6LcAQioaAAAAABTVMAllg8UW0swpY3VaeDX9GEOv"></script>
     {{!-- Favicon --}}
     <link rel="icon" type="image/ico" href="/img/favicon-ico-kino.ico">
+    {{!-- hreflang --}}
+    <link rel="alternate" hreflang="es-CO" href="https://www.k1n0.com.co/"/>
 
 
 </head>
