--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -61,8 +61,24 @@
     {{!-- Favicon --}}
     <link rel="icon" type="image/ico" href="/img/favicon-ico-kino.ico">
     {{!-- hreflang --}}
-    <link rel="alternate" hreflang="es-CO" href="https://www.k1n0.com.co/"/>
+    <link rel="alternate" hreflang="es-CO" href="https://www.k1n0.com.co/" />
+    {{!-- Adwords --}}
+    <!-- Global site tag (gtag.js) - Google Ads: 632681893 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-632681893"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
+        gtag('config', 'AW-632681893');
+    </script>
+    <!-- Event snippet for Website sale conversion page -->
+    <script>
+        gtag('event', 'conversion', {
+            'send_to': 'AW-632681893/jPcaCPPN3fMBEKXr160C',
+            'transaction_id': ''
+        });
+    </script>
 
 </head>
 
