--- a/src/views/partials/home.hbs
+++ b/src/views/partials/home.hbs
@@ -29,6 +29,13 @@
                     <p>Funcionalidad, navegación y velocidad en todos tus sistemas.</p>
                 </div>
             </div>
+            <div class="carousel-item">
+                <img src="/img/kino-bg-d.jpg" class="d-block w-100" alt="k1n0 Web Develop" title="k1n0 Desarrollo Web">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Criptomonedas y Blockchain</h5>
+                    <p>La última tecnología para la rentabilidad de tu negocio.</p>
+                </div>
+            </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -84,7 +91,9 @@
     </div>
 </div>
 {{!-- Fin Carrusel --}}
-<div class="masthead"></div>
+<div class="masthead">
+    <img src="/img/background.jpg" alt="">
+</div>
 {{!-- Intro --}}
 <div class="intro">
     <div class="container">
@@ -395,6 +404,67 @@
 </div>
 {{!-- Fin Destacados --}}
 
+{{!-- Proceso k1n0 --}}
+<div class="howto">
+    <div class="container">
+        <div class="howto__title">
+            <h2>¿Cómo trabajamos en k1n0.com.co?</h2>
+        </div>
+
+        <div class="howto__body">
+            <div class="container">
+                <ul class="howto__list">
+                    <li class="howto__item">
+                        <img src="/img/payment/paso-1.png" alt="" class="howto__img">
+                        <p class="howto__txt">
+                            Realizamos un diagnóstico detallado y profesional enfocándonos en las necesidades
+                            primordiales y en el interés del público objetivo (Target).
+                        </p>
+                    </li>
+                    <li class="howto__item">
+                        <img src="/img/payment/paso-2.png" alt="" class="howto__img">
+                        <p class="howto__txt">
+                            Cotizamos un presupuesto accesible y con base únicamente en las necesidades de tu negocio
+                            para desarrollar los objetivos propuestos.
+                        </p>
+                    </li>
+                    <li class="howto__item">
+                        <img src="/img/payment/paso-3.png" style="width: 126px" alt="" class="howto__img">
+                        <p class="howto__txt">
+                            Ejecutamos un plan de acción efectivo y acorde a los tiempos requeridos por la compañía para
+                            alcanzar los objetivos, optimizando la inversión.
+                        </p>
+                    </li>
+                    <li class="howto__item">
+                        <img src="/img/payment/paso-4.png" alt="" class="howto__img">
+                        <p class="howto__txt">
+                            Analizamos los resultados asegurando la entrega de un servicio completo, de calidad y hecho
+                            a la medida de los objetivos de su empresa.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+{{!-- Fin Proceso k1n0 --}}
+
+{{!-- Medios de pago --}}
+{{!-- <div class="payment">
+    <div class="container">
+        <div class="payment__title">
+            <h2>Medios de pago K1n0c0m</h2>
+        </div>
+
+        <div class="payment__body">
+            <div class="container">
+                <p>Medios de pago</p>
+            </div>
+        </div>
+    </div>
+</div> --}}
+{{!-- Fin Medios de pago --}}
+
 {{!-- Claims --}}
 <div class="claims">
     <div class="container">
@@ -481,3 +551,12 @@
     </div>
 </div>
 {{!-- Fin Asesoría --}}
+
+{{!-- Botón whatsapp directo --}}
+
+<div class="sticky-wp">
+    <a class="enlace-wp" rel="nofollow" target="_blank" href="https://wa.link/p86txk">
+        <p>Escríbenos por WhatsApp</p>
+        <img src="/img/what-direct.png" alt="">
+    </a>
+</div>
