--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -22,11 +22,11 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.k1n0.com.co/">
     <meta property="og:image"
-        content="https://scontent.feoh1-1.fna.fbcdn.net/v/t1.0-9/139661015_1117533562021933_478162099764357035_n.jpg?_nc_cat=109&ccb=2&_nc_sid=e3f864&_nc_eui2=AeEuBWbqhTSivV9FcfxXoRG5zfFyRZrAOMrN8XJFmsA4ysASADOzmr3BpZAGkDr3kM9kw7yCwe1n6wxmhBoFmYFV&_nc_ohc=p5398yM_PLwAX-Y3cpL&_nc_ht=scontent.feoh1-1.fna&oh=bb433948d431c1675e1b65c5a7dd6603&oe=60288BF6">
+        content="https://www.k1n0.com.co/img/logo-intro-black.jpg">
     <meta property="og:image:secure_url"
-        content="https://scontent.feoh1-1.fna.fbcdn.net/v/t1.0-9/139661015_1117533562021933_478162099764357035_n.jpg?_nc_cat=109&ccb=2&_nc_sid=e3f864&_nc_eui2=AeEuBWbqhTSivV9FcfxXoRG5zfFyRZrAOMrN8XJFmsA4ysASADOzmr3BpZAGkDr3kM9kw7yCwe1n6wxmhBoFmYFV&_nc_ohc=p5398yM_PLwAX-Y3cpL&_nc_ht=scontent.feoh1-1.fna&oh=bb433948d431c1675e1b65c5a7dd6603&oe=60288BF6">
-    <meta property="og:image:width" content="851">
-    <meta property="og:image:height" content="315">
+        content="https://www.k1n0.com.co/img/logo-intro-black.jpg">
+    {{!-- <meta property="og:image:width" content="851">
+    <meta property="og:image:height" content="315"> --}}
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:local" content="es_LA">
     <meta property="og:description"
